# sanhedrin-collusion-framework

./: README.md  pyproject.toml
src/sanhedrin/: __init__.py
src/sanhedrin/agents/: __init__.py
src/sanhedrin/bio/: __init__.py
src/sanhedrin/bio/meta_analysis/: __init__.py
src/sanhedrin/bio/protein_design/: __init__.py
src/sanhedrin/bio/variant_calling/: __init__.py  correlation.py  ensemble.py
src/sanhedrin/core/: __init__.py  bootstrap.py  collusion_risk.py  config.py  diversity.py  optimizer.py
src/sanhedrin/games/: __init__.py
src/sanhedrin/viz/: __init__.py
