[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sanhedrin-collusion-framework"
version = "0.1.0"
description = "Game-theoretic framework for ensemble consensus auditing in bioinformatics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Shaul Sapielkin", email = "shaul.sapielkin@weizmann.ac.il"},
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "networkx>=3.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
arch = ["arch>=6.0"]
bio = ["pysam>=0.22", "cyvcf2>=0.31", "biopython>=1.83"]
protein = ["biotite>=0.40", "openai>=1.0", "anthropic>=0.20"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.3"]
all = ["sanhedrin-collusion-framework[arch,bio,protein,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
